html5/style.css
*, *:before, *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

html, body{
    position:absolute;
    width: 100%;
    height: 100%;
    -overflow:hidden;
}

a{
    color: #eec;
}

a:visited{
    color: #886;
}

h1 {
    font-size: 200%;
}

h2{
    font-size: 150%;
}

h3{
    font-size: 125%;
}

h4{
    font-size: 100%;
}

html, body, button, input, textarea, select{
    font-family: Georgia, Tahoma, serif;
    background-color: #445;
    color: #aab;
    margin: 0;
    padding:0;
    border: 0;
}

#menu{
  text-align:center;
}
#menu>p{width:100%;}

#menu>button{
    width:100%;
}

aside{
    position:absolute;
    font-size: 12pt;
    font-weight: bold;
    padding: 0.5em;
    border-size: 5px;
    top:2em;
}

aside, aside>button{
    color: #ffe;
    border-style: solid;
    border-color: #887;
    background-color: #554;
    margin-left:1em;
}

button{
    margin-right: 1em;
    border:solid 1px #667;
    margin:0;
    background-color:#556;
    color:#aab;
    padding:1em;
    min-width:3em;
    text-align:center;
}

button:active{
    background-color:#667;
}

button.selected{
    background-color:#778;
    color:#ccd;
}

section{
    display:none;
    float:left;
    clear:both;
    width:100%;
    height: 100%;
}

section>*{
    float:left;
    clear:left;
}

.textContent{
    overflow-y: scroll;
    word-wrap: break-word;
    text-align: justify;
    padding-right: 1em;
    height: 100%;
    width:100%;
}

#storage-details>*{
    display: none;
}

@media(min-width:320px){
    .textContent, select{
        font-size: 12pt;
    }
    #infobar {
        font-size:8pt;
    }
    #filename{
        width:275px;
    }
}

@media(min-width:641px){
    .textContent, select{
        font-size: 18pt;
    }
    #infobar {
        font-size:10pt;
    }
    #filename{
        width:500px;
        font-size:24pt;
    }
}

@media(min-width:1080px){
    .textContent, select{
        font-size: 24pt;
    }
    #filename{
        font-size:30pt;
    }
    section{
        padding:10em;
    }
}

::-webkit-scrollbar {
    width: 5px;
    background-color: #778;
}

::-webkit-scrollbar-thumb:vertical {
    background-color: #667;
}

